--- a/docker/securebanking-openbanking-uk-rcs.yml
+++ b/docker/securebanking-openbanking-uk-rcs.yml
@@ -1,22 +1,43 @@
+#
+# Copyright © 2020 ForgeRock AS (obst@forgerock.com)
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 ### Spring Configuration for securebanking-openbanking-uk-rcs running in Docker
+
+logging:
+  level:
+    com.forgerock: DEBUG
 
 rcs:
   issuerId: forgerock-rcs
 
 rs:
-  internal-port: 8082
-  base-url: http://localhost:${rs.internal-port}
+  internal-port: 8080
+  base-url: http://rs-simulator:${rs.internal-port}
 
 idm:
-  internal-port: 8083
-  base-url: http://wiremock:${idm.internal-port}
+  internal-port: 9080
+  base-url: http://wiremock:${idm.internal-port}/idm
 
 jwkms:
-  internal-port: 8083
-  base-url: http://wiremock:${jwkms.internal-port}
+  internal-port: 9080
+  base-url: http://wiremock:${jwkms.internal-port}/jwkms
 
 am:
-  root: http://wiremock:8083
+  hostname: am
+  root: http://wiremock:9080/${am.hostname}
   cookie:
     name: iPlanetDirectoryPro
   oidc:
@@ -25,3 +46,4 @@ am:
     id: id
   endpoint:
     userprofile: ${am.root}/userprofile
+    authorize: ${am.root}/oauth2/authorize
