--- a/docker/securebanking-openbanking-uk-rcs.yml
+++ b/docker/securebanking-openbanking-uk-rcs.yml
@@ -15,14 +15,18 @@
 #
 
 ### Spring Configuration for securebanking-openbanking-uk-rcs running in Docker
-dns:
-  hosts:
-    root: dev.forgerock.financial
+
+# Properties for filters (ex. CorsFilter)
+filters:
+  cors:
+    origin:
+      subdomain: dev.forgerock.financial
 
 logging:
   level:
     com.forgerock: DEBUG
 
+# identity platform properties
 identity-platform:
   client:
     base_url: https://obdemo.dev.forgerock.financial
@@ -52,6 +56,7 @@ identity-platform:
     jwkms_request_method: POST
     jwkms_consent_signing_endpoint: /jwkms/rcs/signresponse
 
+# Rcs properties
 rcs:
   issuerId: forgerock-rcs
   # conditional for requests
@@ -60,7 +65,7 @@ rcs:
       jwt:
         must-be-validated: false # used in (ConsentDetailsApiController: default true)
 
-
+# RS properties
 rs:
   internal-port: 8080
-  base-url: http://securebanking-openbanking-uk-rs:${rs.internal-port}
+  base-url: http://securebanking-openbanking-uk-rs:${rs.internal-port} # kubernetes container
