--- a/docker/securebanking-openbanking-uk-rcs.yml
+++ b/docker/securebanking-openbanking-uk-rcs.yml
@@ -18,9 +18,12 @@
 
 # Properties for filters (ex. CorsFilter)
 filters:
-  cors:
-    origin:
-      subdomain: dev.forgerock.financial
+  cors: # CorsFilter
+    expected_origin_ends_with: localhost # dev.forgerock.financial # default value localhost
+    allowed_headers: accept-api-version, x-requested-with, authorization, Content-Type, Authorization, credential, X-XSRF-TOKEN, Id-Token
+    allowed_methods: GET, PUT, POST, DELETE, OPTIONS, PATCH
+    allowed_credentials: true # default value true
+    max_age: 3600 # default value 3600
 
 logging:
   level:
