--- a/docker/securebanking-openbanking-uk-rcs.yml
+++ b/docker/securebanking-openbanking-uk-rcs.yml
@@ -19,7 +19,7 @@
 # Properties for filters (ex. CorsFilter)
 filters:
   cors: # CorsFilter
-    expected_origin_ends_with: localhost # dev.forgerock.financial # default value localhost
+    expected_origin_ends_with: dev.forgerock.financial # default value localhost
     allowed_headers: accept-api-version, x-requested-with, authorization, Content-Type, Authorization, credential, X-XSRF-TOKEN, Id-Token
     allowed_methods: GET, PUT, POST, DELETE, OPTIONS, PATCH
     allowed_credentials: true # default value true
