--- a/docker/securebanking-openbanking-uk-rcs.yml
+++ b/docker/securebanking-openbanking-uk-rcs.yml
@@ -19,7 +19,7 @@
 # Properties for filters (ex. CorsFilter)
 filters:
   cors: # CorsFilter
-    expected_origin_ends_with: dev.forgerock.financial # default value localhost
+    expected_origin_ends_with: ${EXPECTED_ORIGIN_ENDS:dev.forgerock.financial} # default value localhost
     allowed_headers: accept-api-version, x-requested-with, authorization, Content-Type, Authorization, credential, X-XSRF-TOKEN, Id-Token
     allowed_methods: GET, PUT, POST, DELETE, OPTIONS, PATCH
     allowed_credentials: true # default value true
@@ -32,8 +32,8 @@ logging:
 # identity platform properties
 identity-platform:
   client:
-    base_url: https://obdemo.dev.forgerock.financial
-    iam_base_uri: https://iam.dev.forgerock.financial
+    ig_server: ${IG_SERVER:https://obdemo.dev.forgerock.financial}
+    iam_server: ${IAM_SERVER:https://iam.dev.forgerock.financial}
     jwk_uri: ${identity-platform.client.iam_base_uri}/am/oauth2/connect/jwk_uri
     contexts_api_client:
       get: /repo/apiclients/@ClientId@
@@ -67,8 +67,4 @@ rcs:
     request:
       jwt:
         must-be-validated: false # used in (ConsentDetailsApiController: default true)
-
-# RS properties
-rs:
-  internal-port: 8080
-  base-url: http://securebanking-openbanking-uk-rs:${rs.internal-port} # kubernetes container
+  rs_server: ${RS_SERVER:localhost}
