--- a/docker/securebanking-openbanking-uk-rcs.yml
+++ b/docker/securebanking-openbanking-uk-rcs.yml
@@ -32,9 +32,9 @@ logging:
 # identity platform properties
 identity-platform:
   client:
-    ig_server: ${IG_SERVER:https://obdemo.dev.forgerock.financial}
-    iam_server: ${IAM_SERVER:https://iam.dev.forgerock.financial}
-    jwk_uri: ${identity-platform.client.iam_base_uri}/am/oauth2/connect/jwk_uri
+    ig_fqdn: ${IG_FQDN:https://obdemo.dev.forgerock.financial}
+    identity_platform_fqdn: ${IDENTITY_PLATFORM_FQDN:https://iam.dev.forgerock.financial}
+    jwk_uri: ${identity-platform.client.identity_platform_fqdn}/am/oauth2/connect/jwk_uri
     contexts_api_client:
       get: /repo/apiclients/@ClientId@
       put: /repo/apiclients/@ClientId@
@@ -67,4 +67,4 @@ rcs:
     request:
       jwt:
         must-be-validated: false # used in (ConsentDetailsApiController: default true)
-  rs_server: ${RS_SERVER:localhost}
+  rs_fqdn: ${RS_FQDN:localhost}
