--- a/docker/securebanking-openbanking-uk-rcs.yml
+++ b/docker/securebanking-openbanking-uk-rcs.yml
@@ -75,3 +75,15 @@ rs:
         findUserById: /backoffice/accounts/search/findByUserId # Context endpoint to find accounts user by userId
       domestic-payments:
         findUserById: /backoffice/domestic-payments/search/findByUserId # Context endpoint to find payment user by userId
+
+# Swagger Documentation Specification properties
+swagger:
+  title: Secure Banking Access Toolkit
+  description: Swagger for Read/Write Open Banking API Specification (UK) (https://openbankinguk.github.io/read-write-api-site3)
+  license: open-licence
+  license-url: https://www.openbanking.org.uk/open-licence
+  terms-of-service-url: https://backstage.forgerock.com/knowledge/openbanking/article/a45894685
+  contact-name: ForgeRock RS Simulator
+  contact-url: https://www.forgerock.com/
+  docket-apis-basePackage: com.forgerock.securebanking.openbanking.uk.rs.api.obie
+  docket-paths-selector-regex: /open-banking/v(\d+.)?(\d+.)?(\*|\d+)
